--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <!-- Dog 8 -->
                         <a href="available-dogs.html" class="dog-slide-item">
                             <div class="dog-slide-image">
-                                <img src="assets/images/rottweiler.jpg" alt="Bruno"
+                                <img src="assets/images/rotriver.jpg" alt="Bruno"
                                     onerror="this.src='assets/images/doberman.jpg'">
                             </div>
                             <div class="dog-slide-content">
@@ -318,8 +318,8 @@
                         <!-- Dog 9 -->
                         <a href="available-dogs.html" class="dog-slide-item">
                             <div class="dog-slide-image">
-                                <img src="assets/images/cane-corso.jpg" alt="Zara"
-                                    onerror="this.src='assets/images/max-1.jpg'">
+                                <img src="assets/images/canecorso.jpg" alt="Zara"
+                                    onerror="this.src='assets/images/canecorso.jpg'">
                             </div>
                             <div class="dog-slide-content">
                                 <h3>ZARA</h3>
@@ -431,7 +431,7 @@
                                     </div>
                                     <div>
                                         <h4>Sarah & Family</h4>
-                                        <span>Golden Retriever Owner</span>
+                                        <span>Belgian Malinois Owner</span>
                                     </div>
                                 </div>
                             </div>
@@ -476,7 +476,7 @@
                                     </div>
                                     <div>
                                         <h4>Michael R.</h4>
-                                        <span>Business Owner</span>
+                                        <span>Doberman Owner</span>
                                     </div>
                                 </div>
                             </div>
