--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="container-fluid">
             <h2 class="text-center text-gold showcase-title">BELGIAN MALINOIS, DOBERMAN & GERMAN SHEPHERD TRAINED DOGS
             </h2>
-                    
+
             <p class="text-center text-white mb-5 showcase-subtitle">Elite K9 PROTECTION DOGS FOR SALE IN LOS
                 ANGELES. FULLY TRAINED FAMILY GUARDIANS & PREMIUM PUPPIES.</p>
 
@@ -245,7 +245,7 @@
                                 <h3>BAX</h3>
                                 <div class="divider-gold"></div>
                                 <span class="dog-role">FAMILY PROTECTION DOG</span>
-                                <span class="dog-breed">GERMAN SHEPHERD</span>
+                                <span class="dog-breed">DUTCH SHEPHERD</span>
                             </div>
                         </a>
 
@@ -464,12 +464,9 @@
                         <div class="testimonial-slide">
                             <div class="testimonial-card glass-card">
                                 <i class="fas fa-quote-left quote-icon"></i>
-                                <p class="testimonial-text">"I needed a personal protection dog that could switch off
-                                    and be
-                                    a
-                                    pet. Elite K9 delivered exactly that. My dog is fierce when needed, but a teddy bear
-                                    with
-                                    guests."</p>
+                                <p class="testimonial-text">"I needed a personal protection dog to guard my warehouse
+                                    and assets. Elite K9 delivered exactly that. My dog is fierce when protection is
+                                    required, yet calm, obedient, and well-mannered around staff and visitors."</p>
                                 <div class="client-info">
                                     <div class="client-photo-wrapper">
                                         <img src="assets/images/rex-2.jpg" alt="Client"
@@ -477,7 +474,7 @@
                                     </div>
                                     <div>
                                         <h4>Michael R.</h4>
-                                        <span>Doberman Owner</span>
+                                        <span>Business Owner</span>
                                     </div>
                                 </div>
                             </div>
