--- a/available-dogs.html
+++ b/available-dogs.html
@@ -172,7 +172,7 @@
                     </a>
                     <div class="footer-contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>13238 Riverside <br>Dr Sherman Oaks, CA 91423<br>(Near Macy's Mall Los Angeles)</span>
+                        <span>13238 Riverside Dr<br> Sherman Oaks, CA 91423<br>(Near Macy's Mall Los Angeles)</span>
                     </div>
                     <div class="footer-contact-item">
                         <i class="fas fa-clock"></i>
