--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                         <div class="text-center mt-4">
                             <h3 class="text-gold h4 mb-2">Elite K9 Group</h3>
                             <p style="font-size: 1.1rem; line-height: 1.6;">
-                                <i class="fas fa-map-marker-alt text-gold mr-2"></i> 13238 Riverside <br>Dr
+                                <i class="fas fa-map-marker-alt text-gold mr-2"></i> 13238 Riverside Dr<br>
                                 Sherman Oaks, CA 91423<br>
                                 <span class="text-white-50">(Near Macy's Mall Los Angeles)</span>
                             </p>
@@ -589,7 +589,7 @@
                         </a>
                         <div class="footer-contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>13238 Riverside <br>Dr Sherman Oaks, CA 91423<br>(Near Macy's Mall Los Angeles)</span>
+                            <span>13238 Riverside Dr<br> Sherman Oaks, CA 91423<br>(Near Macy's Mall Los Angeles)</span>
                         </div>
                         <div class="footer-contact-item">
                             <i class="fas fa-clock"></i>
