--- a/blog.html
+++ b/blog.html
@@ -222,6 +222,22 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- They Trust Us Section -->
+                <div
+                    style="margin-top: 60px; padding: 40px; background: white; border-radius: 12px; box-shadow: var(--shadow); border: 1px solid #eee;">
+                    <h2 style="margin-bottom: 15px; color: var(--text-dark); font-size: 2rem;">They Trust Us</h2>
+                    <p style="color: var(--text-light); margin-bottom: 25px; font-size: 1.1rem;">
+                        Our reputation is built on trust and results. Visit our Yelp profile to see photos, reviews, and
+                        why families throughout the San Fernando Valley trust us with their canine companions.
+                    </p>
+                    <a href="https://m.yelp.com/biz/elite-k-9-group-san-fernando-valley?dd_referrer=https%3A%2F%2Fwww.google.be%2F"
+                        target="_blank"
+                        style="display: inline-flex; align-items: center; gap: 12px; background: #d32323; color: white; padding: 16px 32px; border-radius: 50px; font-weight: bold; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(211, 35, 35, 0.3); font-size: 1.1rem;">
+                        <i class="fab fa-yelp" style="font-size: 1.5rem;"></i>
+                        They Trust Us - Review Elite K9 on Yelp
+                    </a>
+                </div>
             </div>
         </div>
 
