--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@
                         training</strong> capabilities, our <strong>K9 trainer</strong> methods are rooted in clarity,
                     fairness, and results. Stop struggling with leash pulling, reactivity, or fear. Start enjoying a
                     calm, confident companion today.</p>
+
+                <div style="margin: 25px 0; padding: 20px; border-left: 4px solid #d32323; background: #fff;">
+                    <h4 style="margin-bottom: 5px; color: var(--text-dark);">They Trust Us</h4>
+                    <a href="https://m.yelp.com/biz/elite-k-9-group-san-fernando-valley?dd_referrer=https%3A%2F%2Fwww.google.be%2F"
+                        target="_blank"
+                        style="color: #d32323; font-weight: 700; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+                        <i class="fab fa-yelp"></i> Check our reviews on Yelp &rarr;
+                    </a>
+                </div>
+
                 <!-- Added CTA in About for better flow -->
                 <a href="#contact" class="text-link mt-2 text-highlight">See The Transformation &rarr;</a>
             </div>
