--- a/blog.html
+++ b/blog.html
@@ -202,9 +202,9 @@
                             </h4>
                             <p style="color: var(--text-light); line-height: 1.6;">
                                 <a href="tel:+18183573797"
-                                    style="color: var(--text-light); text-decoration: none;">(818) 357-3797</a><br>
+                                    style="color: var(--text-light); text-decoration: none; border-bottom: 1px solid rgba(0,0,0,0.1);">818-357-3797</a><br>
                                 <a href="mailto:info@elitek9group.com"
-                                    style="color: var(--text-light); text-decoration: none;">info@elitek9group.com</a>
+                                    style="color: var(--text-light); text-decoration: none; border-bottom: 1px solid rgba(0,0,0,0.1);">info@elitek9group.com</a>
                             </p>
                         </div>
 
@@ -228,15 +228,23 @@
                     style="margin-top: 60px; padding: 40px; background: white; border-radius: 12px; box-shadow: var(--shadow); border: 1px solid #eee;">
                     <h2 style="margin-bottom: 15px; color: var(--text-dark); font-size: 2rem;">They Trust Us</h2>
                     <p style="color: var(--text-light); margin-bottom: 25px; font-size: 1.1rem;">
-                        Our reputation is built on trust and results. Visit our Yelp profile to see photos, reviews, and
+                        Our reputation is built on trust and results. Visit our profiles on trusted platforms to see
+                        photos, reviews, and
                         why families throughout the San Fernando Valley trust us with their canine companions.
                     </p>
-                    <a href="https://m.yelp.com/biz/elite-k-9-group-san-fernando-valley?dd_referrer=https%3A%2F%2Fwww.google.be%2F"
-                        target="_blank"
-                        style="display: inline-flex; align-items: center; gap: 12px; background: #d32323; color: white; padding: 16px 32px; border-radius: 50px; font-weight: bold; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(211, 35, 35, 0.3); font-size: 1.1rem;">
-                        <i class="fab fa-yelp" style="font-size: 1.5rem;"></i>
-                        They Trust Us - Review Elite K9 on Yelp
-                    </a>
+                    <div style="display: flex; flex-wrap: wrap; gap: 20px;">
+                        <a href="https://m.yelp.com/biz/elite-k-9-group-san-fernando-valley?dd_referrer=https%3A%2F%2Fwww.google.be%2F"
+                            target="_blank"
+                            style="display: inline-flex; align-items: center; gap: 12px; background: #d32323; color: white; padding: 14px 28px; border-radius: 50px; font-weight: bold; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(211, 35, 35, 0.3); font-size: 1rem;">
+                            <i class="fab fa-yelp" style="font-size: 1.3rem;"></i>
+                            Elite K9 on Yelp
+                        </a>
+                        <a href="https://goodydoggy.com/profile/elite-k-9-group/" target="_blank"
+                            style="display: inline-flex; align-items: center; gap: 12px; background: #2ecc71; color: white; padding: 14px 28px; border-radius: 50px; font-weight: bold; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(46, 204, 113, 0.3); font-size: 1rem;">
+                            <i class="fas fa-dog" style="font-size: 1.3rem;"></i>
+                            Elite K9 on Goody Doggy
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
