--- a/index.html
+++ b/index.html
@@ -142,12 +142,18 @@
                     calm, confident companion today.</p>
 
                 <div style="margin: 25px 0; padding: 20px; border-left: 4px solid #d32323; background: #fff;">
-                    <h4 style="margin-bottom: 5px; color: var(--text-dark);">They Trust Us</h4>
-                    <a href="https://m.yelp.com/biz/elite-k-9-group-san-fernando-valley?dd_referrer=https%3A%2F%2Fwww.google.be%2F"
-                        target="_blank"
-                        style="color: #d32323; font-weight: 700; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
-                        <i class="fab fa-yelp"></i> Check our reviews on Yelp &rarr;
-                    </a>
+                    <h4 style="margin-bottom: 10px; color: var(--text-dark);">They Trust Us</h4>
+                    <div style="display: flex; flex-direction: column; gap: 10px;">
+                        <a href="https://m.yelp.com/biz/elite-k-9-group-san-fernando-valley?dd_referrer=https%3A%2F%2Fwww.google.be%2F"
+                            target="_blank"
+                            style="color: #d32323; font-weight: 700; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+                            <i class="fab fa-yelp"></i> Review us on Yelp &rarr;
+                        </a>
+                        <a href="https://goodydoggy.com/profile/elite-k-9-group/" target="_blank"
+                            style="color: #2ecc71; font-weight: 700; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+                            <i class="fas fa-dog"></i> Elite K9 on Goody Doggy &rarr;
+                        </a>
+                    </div>
                 </div>
 
                 <!-- Added CTA in About for better flow -->
