--- a/blog.html
+++ b/blog.html
@@ -281,6 +281,16 @@
                         it's <strong>Service Dog Training</strong> or rehabilitation for aggressive behaviors, we
                         approach every challenge with compassion and dedication.
                     </p>
+                    <p style="margin-bottom: 25px;">
+                        Beyond training, our heart lies in rescue and community support. We proudly collaborate with <a
+                            href="https://www.laanimalservices.com/" target="_blank"
+                            style="color: var(--primary-orange); text-decoration: underline;">LA Animal Services</a> to
+                        ensure that no <strong>Abandoned dog</strong> is left behind. We believe in giving every animal
+                        a chance; we provide food, a safe <strong>Shelter</strong>, and a place to call home for those
+                        in
+                        need. We are not the type to simply leave a dog on the street—we love them deeply and keep them
+                        under our care until they find their forever path.
+                    </p>
                     <p style="margin-bottom: 40px;">
                         Seeing a dog transform into a confident, loving guardian is our greatest reward. We do this work
                         because we love it, and we treat every dog as if they were our own family member.
