--- a/future-breeding.html
+++ b/future-breeding.html
@@ -68,7 +68,7 @@
                 <!-- Male 1 -->
                 <div class="breeding-card">
                     <div class="breeding-img">
-                        <img src="assets/images/Titan.jpg" alt="" srcset="">
+                        <img src="assets/images/titan.jpg" alt="" srcset="">
                         <span class="gender-badge"><i class="fas fa-mars"></i> Stud</span>
 
                     </div>
