--- a/dog-profile.html
+++ b/dog-profile.html
@@ -150,7 +150,7 @@
                 <div class="footer-contact-info">
                     <a href="tel:+18183573797" class="footer-contact-item">
                         <i class="fas fa-phone-alt"></i>
-                        <span>(818) 357-3797</span>
+                        <span>818-357-3797</span>
                     </a>
                     <a href="mailto:info@elitek9group.com" class="footer-contact-item">
                         <i class="fas fa-envelope"></i>
