--- a/future-breeding.html
+++ b/future-breeding.html
@@ -69,7 +69,7 @@
                 <div class="breeding-card">
                     <div class="breeding-img">
                         <img src="assets/images/titan.jpg" alt="" srcset="">
-                        <span class="gender-badge"><i class="fas fa-mars"></i> Stud</span>
+
 
                     </div>
                     <div class="breeding-info">
@@ -90,7 +90,7 @@
                 <div class="breeding-card">
                     <div class="breeding-img">
                         <img src="assets/images/Bolt.jpg" alt="Bolt" srcset="">
-                        <span class="gender-badge"><i class="fas fa-mars"></i> Stud</span>
+
                     </div>
                     <div class="breeding-info">
                         <h3>Bolt</h3>
@@ -114,7 +114,7 @@
                 <!-- Female 1 -->
                 <div class="breeding-card">
                     <div class="breeding-img">
-                        <span class="gender-badge"><i class="fas fa-venus"></i> Dam</span>
+
                         <img src="assets/images/Xena.jpg" alt="" srcset="">
                     </div>
                     <div class="breeding-info">
@@ -135,7 +135,7 @@
                 <div class="breeding-card">
                     <div class="breeding-img">
                         <img src="assets/images/luna.jpg" alt="" srcset="">
-                        <span class="gender-badge"><i class="fas fa-venus"></i> Dam</span>
+
                     </div>
                     <div class="breeding-info">
                         <h3>Luna</h3>
@@ -173,7 +173,7 @@
                 <div class="footer-contact-info">
                     <a href="tel:+18183573797" class="footer-contact-item">
                         <i class="fas fa-phone-alt"></i>
-                        <span>(818) 357-3797</span>
+                        <span>818-357-3797</span>
                     </a>
                     <a href="mailto:info@elitek9group.com" class="footer-contact-item">
                         <i class="fas fa-envelope"></i>
