--- a/index.html
+++ b/index.html
@@ -577,9 +577,11 @@
                     <div class="map-container reveal reveal-slide-right"
                         style="height: 100%; min-height: 300px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.3);">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.704880290182!2d-118.42424762379174!3d34.15738291217055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2963ca476e8ab%3A0xbb9b04733c53ec74!2zMTMyMzggUml2ZXJzaWRlIERyLCBTaGVybWFuIE9ha3MsIENBIDkxNDIzLCDQodCo0JA!5e1!3m2!1sru!2sam!4v1770817144426!5m2!1sru!2sam"
-                            width="100%" height="100%" style="border:0; min-height: 450px;" allowfullscreen=""
-                            loading="lazy"></iframe>
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.704880290182!2d-118.42424762379174!3d34.15738291217055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2963ca476e8ab%3A0xbb9b04733c53ec74!2zMTMyMzggUml2ZXJzaWRlIERyLCBTaGVybWFuIE9ha3MsIENBIDkxNDIz!5e1!3m2!1sen!2sus!4v1770817144426!5m2!1sen!2sus"
+                            width="100%" height="100%" style="border:0; min-height:450px;" allowfullscreen
+                            loading="lazy">
+                        </iframe>
+
                     </div>
                 </div>
             </div>
