--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Dog Training Near Me | K9 Trainer Los Angeles | Belgian Malinois Trained Dogs For Sale</title>
     <meta name="description"
         content="Expert K9 trainer specializing in dog training near me, training for aggressive dogs, service dog training, and board and train programs. German Shepherd training, Alsatian training, Belgian Malinois trained dogs for sale in Los Angeles CA. Dog boot camp, anxiety service dog training, and breeding Malinois.">
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
